--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
   <body>
     <div class="coperta" ></div>
 <div class="message">
+  <div class="title">Contact</div>
   <p>Adress: Alexandru cel Bun Avenue</p>
   <p> Phone: 0987654321</p>
   <p>E-mail: papuci@gmail.com</p>
