--- a/statistici.html
+++ b/statistici.html
@@ -6,6 +6,28 @@
     <title>Statistics</title>
   </head>
   <body>
-    <div class="coperta" ></div>
+    <div class="coperta"></div>
+    <div class="stat">Statistics</div>
+    <h1 class="title">Most views in the last week</h1>
+
+    <p class="subtitle">Femei</p>
+    <div class="container">
+      <div class="Views Femei">65%</div>
+    </div>
+
+    <p class="subtitle">Barbati</p>
+    <div class="container">
+      <div class="Views Barbati">25%</div>
+    </div>
+
+    <p class="subtitle">Baietei</p>
+    <div class="container">
+      <div class="Views Baietei">5%</div>
+    </div>
+
+    <p class="subtitle">Fetite</p>
+    <div class="container">
+      <div class="Views Fetite">5%</div>
+    </div>
   </body>
 </html>>
