--- a/MENU.HTML
+++ b/MENU.HTML
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="logo_MN.png" type="image/x-icon">
     <title>FOOW</title>
-    <link rel="stylesheet" href="MENU.css">
+    <link rel="stylesheet" media="(max-width: 690px)" href="MENU_max-690px.css">
+    <link rel="stylesheet" media="(min-width: 690px)" href="MENU_min-690px.css">
+
 
   </head>
   <body>
