--- a/statistici.html
+++ b/statistici.html
@@ -7,6 +7,24 @@
   </head>
   <body>
     <div class="coperta"></div>
+    <div class="navbar1">
+    <ul class="menu">
+      <li ><a href="#0">First Page</a></li>
+      <li><a href="#0">Women</a></li>
+      <li ><a href="#0">Men</a></li>
+      <div class="dropdown">
+      <li ><a href="#0">Kids</a>
+        <div class="dropdown-content">
+          <a href="#0">Girl</a>
+          <a href="#0">Boy</a>
+        </div>
+      </div>
+      </li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="statistici.html">Statistics</a></li>
+    </ul>
+  </div>
+
     <div class="stat">Statistics</div>
     <h1 class="title">Most views in the last week</h1>
 
