--- a/barbati.html
+++ b/barbati.html
@@ -12,19 +12,19 @@
 
     <nav class="navbar1">
       <ul class="menu">
-        <li><a href="#0">First Page</a></li>
-        <li><a href="#0">Women</a></li>
-        <li><a href="#0">Men</a></li>
+        <li><a href="MENU.html">First Page</a></li>
+        <li><a href="womenpage.html">Women</a></li>
+        <li><a href="barbati.html">Men</a></li>
         <div class="dropdown">
-        <li><a href="#0">Kids</a>
+        <li><a href="KIDS.html">Kids</a>
           <div class="dropdown-content">
-            <a href="#0">Girl</a>
-            <a href="#0">Boy</a>
+            <a href="paginakids.html">Girl</a>
+            <a href="boyspage.html">Boy</a>
           </div>
         </li>
         </div>
-        <li><a href="#0">Contact</a></li>
-        <li><a href="#0">Statistics</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="statistici.html">Statistics</a></li>
       </ul>
     </nav>
 
