--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" media="(max-width:690px)" href="contactmax690.css">
+  <link rel="stylesheet" media="(min-width: 690px)" href="contact.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact</title>
   </head>
   <body>
-    <div class="coperta" ></div>
     <div class="navbar1">
     <ul class="menu">
-      <li ><a href="#0">First Page</a></li>
-      <li><a href="#0">Women</a></li>
-      <li ><a href="#0">Men</a></li>
+      <li ><a href="MENU.html">First Page</a></li>
+      <li><a href="womenpage.html">Women</a></li>
+      <li ><a href="barbati.html">Men</a></li>
       <div class="dropdown">
-      <li ><a href="#0">Kids</a>
+      <li ><a href="KIDS.html">Kids</a>
         <div class="dropdown-content">
-          <a href="#0">Girl</a>
-          <a href="#0">Boy</a>
+          <a href="paginakids.html">Girl</a>
+          <a href="boyspage.html">Boy</a>
         </div>
       </div>
       </li>
@@ -24,6 +24,7 @@
       <li><a href="statistici.html">Statistics</a></li>
     </ul>
   </div>
+  <div class="coperta" ></div>
 <div class="message">
   <div class="title">Contact</div>
   <p>Adress: Alexandru cel Bun Avenue</p>
