--- a/paginainregistrare.html
+++ b/paginainregistrare.html
@@ -27,7 +27,7 @@
         <option value="Kid">Kid</option>
       </select>
 <br></br>
-    <a href="paginainregistrare.html" class="button">SignUp</a>
+    <a href="MENU.html" class="button">SignUp</a>
 </div>
   </body>
 </html>
