--- a/statistici.html
+++ b/statistici.html
@@ -1,22 +1,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="statistici.css">
+    <link rel="stylesheet" media="(max-width: 690px)" href="statistici-max700.css">
+  <link rel="stylesheet" media="(min-width: 690px)" href="statistici.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Statistics</title>
   </head>
   <body>
-    <div class="coperta"></div>
     <div class="navbar1">
     <ul class="menu">
-      <li ><a href="#0">First Page</a></li>
-      <li><a href="#0">Women</a></li>
-      <li ><a href="#0">Men</a></li>
+      <li ><a href="MENU.html">First Page</a></li>
+      <li><a href="womenpage.html">Women</a></li>
+      <li ><a href="barbati.html">Men</a></li>
       <div class="dropdown">
-      <li ><a href="#0">Kids</a>
+      <li ><a href="KIDS.html">Kids</a>
         <div class="dropdown-content">
-          <a href="#0">Girl</a>
-          <a href="#0">Boy</a>
+          <a href="paginakids.html">Girl</a>
+          <a href="boyspage.html">Boy</a>
         </div>
       </div>
       </li>
@@ -24,28 +24,28 @@
       <li><a href="statistici.html">Statistics</a></li>
     </ul>
   </div>
-
+    <div class="coperta"></div>
     <div class="stat">Statistics</div>
     <h1 class="title">Most views in the last week</h1>
 
-    <p class="subtitle">Femei</p>
+    <p class="subtitle">Women</p>
     <div class="container">
       <div class="Views Femei">65%</div>
     </div>
 
-    <p class="subtitle">Barbati</p>
+    <p class="subtitle">Men</p>
     <div class="container">
       <div class="Views Barbati">25%</div>
     </div>
 
-    <p class="subtitle">Baietei</p>
+    <p class="subtitle">Boys</p>
     <div class="container">
       <div class="Views Baietei">5%</div>
     </div>
 
-    <p class="subtitle">Fetite</p>
+    <p class="subtitle">Girls</p>
     <div class="container">
       <div class="Views Fetite">5%</div>
     </div>
   </body>
-</html>>
+</html>
