--- a/paginalogare.html
+++ b/paginalogare.html
@@ -17,7 +17,7 @@
 <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
-    <a href="paginainregistrare.html" class="button">Login</a>
+    <a href="MENU.html" class="button">Login</a>
 </div>
   </body>
 </html>
