--- a/MENU.HTML
+++ b/MENU.HTML
@@ -8,9 +8,9 @@
     <link rel="stylesheet" media="(max-width: 690px)" href="MENU_max-690px.css">
     <link rel="stylesheet" media="(min-width: 690px)" href="MENU_min-690px.css">
 
-
   </head>
   <body>
+<!--coperta-->
     <div class="coperta" >
         <div class="stanga">
           <h1>Foow</h1>
@@ -24,8 +24,8 @@
           <h2>Assistent</h2>
         </div>
     </div>
-
-      <div class="navbar1">
+<!--html meniu-->
+      <nav class="navbar1">
       <ul class="menu">
         <li ><a href="#0">First Page</a></li>
         <li><a href="#0">Women</a></li>
@@ -41,22 +41,58 @@
         <li><a href="#0">Contact</a></li>
         <li><a href="#0">Statistics</a></li>
       </ul>
-    </div>
+    </nav>
 
-    <div class="textbox">
-      <h1>About Foow Assistent</h1>
-      <p>Foow Assistent started like a project for Web Tehnologies. This project has as its purpose to help people to be cool and wear the right shoes.</p>
-      <p>The initial team was made up of : </p>
-      <ol>
-        <li>Calutu Maria-Alexandra</li>
-        <li>Mariniuc Andrei</li>
-        <li>Onofrei Claudia</li>
-      </ol>
-      <p>There you can find best choose for shoes.We offer a wide range of shoes for every occasion, for you and your family.</p>
+<!--asta i codul pt modal-->
+    <button id="myBtn" class="myBtn">Press for Notification</button>
 
 
-      </div>
-    </div>
+<div id="myModal" class="modal">
 
+<div class="modal-content">
+  <span class="close">&times;</span>
+  <p>This month will be very hot, so you can wear indigo sandals for a walk on the lake.</p>
+  <button class="bt">Share</button>
+</div>
+
+
+</div>
+
+<!--asta-i pt text-->
+<div class="textbox">
+  <h1>About Foow Assistent</h1>
+
+<p>Your partner is bored because you keep trying shoes ? Your friend is busy with her newborn or her kids and can't give you advice about shoes, and your mom doesn't have the same taste in shoes like you ? It's easy. On our website you can find your new virtual friend who can be there for you anytime! Easy, fast and free!</p>
+
+
+  </div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
   </body>
 </html>
