Men page + responsive

--- a/barbati.html
+++ b/barbati.html
@@ -29,7 +29,8 @@
     </nav>
 
     <div class="Flex">
-      <img class="pozaCo" src="BeFunky-collage.jpg">
+        <p class="Text">It's the perfect time <br> to find the perfect shoes <br> for your event!</p>
+      <img class="pozaCo" src="collagemen.jpg">
     </div>
 
 
@@ -38,13 +39,13 @@
   <a href="#section2">
     <div id="#lista1">
       <ul class="pas1">
-        <li onclick="clickPoza1(event)"><img class = "rezphoto" id="poza1" src="p1.jpg"><p>SunnyDay</p></li>
-        <li onclick="clickPoza2(event)"><img class = "rezphoto" id="poza2" src="p2.jpg"><p>HotDay</p></li>
-        <li onclick="clickPoza3(event)"><img class = "rezphoto" id="poza3" src="p3.jpg"><p>CloudyDay</p></li>
-        <li onclick="clickPoza4(event)"><img class = "rezphoto" id="poza4" src="p4.jpg"><p>RainyDay</p></li>
-        <li onclick="clickPoza5(event)"><img class = "rezphoto" id="poza5" src="p5.jpg"><p>FoggyDay</p></li>
-        <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="p6.jpg"><p>SnowyDay</p></li>
-        <li onclick="clickPoza7(event)"><img class = "rezphoto" id="poza1" src="p7.jpg"><p>SunnyDay</p></li>
+        <li onclick="clickPoza1(event)"><img class = "rezphoto" id="poza1" src="p1.jpg"><p>Sunny Day</p></li>
+        <li onclick="clickPoza2(event)"><img class = "rezphoto" id="poza2" src="p2.jpg"><p>Hot Day</p></li>
+        <li onclick="clickPoza3(event)"><img class = "rezphoto" id="poza3" src="p3.jpg"><p>Cloudy Day</p></li>
+        <li onclick="clickPoza4(event)"><img class = "rezphoto" id="poza4" src="p4.jpg"><p>Rainy Day</p></li>
+        <li onclick="clickPoza5(event)"><img class = "rezphoto" id="poza5" src="p5.jpg"><p>Foggy Day</p></li>
+        <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="p6.jpg"><p>Snowy Day</p></li>
+        <li onclick="clickPoza7(event)"><img class = "rezphoto" id="poza7" src="p7.jpg"><p>Cold Day</p></li>
       </ul>
     </div>
   </a>
@@ -61,6 +62,9 @@
         <li onclick="clickPoza4(event)"><img class = "rezphoto" id="poza4" src="p11.jpg"><p>Office</p></li>
         <li onclick="clickPoza5(event)"><img class = "rezphoto" id="poza5" src="p12.jpg"><p>Birthday Party</p></li>
         <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="p13.jpg"><p>Prom Night</p></li>
+        <li onclick="clickPoza7(event)"><img class = "rezphoto" id="poza7" src="gym.jpg"><p>Sport time</p></li>
+        <li onclick="clickPoza8(event)"><img class = "rezphoto" id="poza8" src="business.jpg"><p>Business meating</p></li>
+        <li onclick="clickPoza9(event)"><img class = "rezphoto" id="poza9" src="clubbing.jpg"><p>Club time</p></li>
       </ul>
     </div>
   </a>
