Women page + responsive

--- a/womenpage.html
+++ b/womenpage.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>WOMEN-FOOW</title>
-    <link rel="stylesheet" href="womenpage.css">
+    <link rel="stylesheet" media="(min-width: 690px)" href="womenpage.css">
+    <link rel="stylesheet" media="(max-width: 690px)" href="womenpagemax.css">
+
   </head>
   <body>
     <div class="navbar1">
@@ -43,7 +45,7 @@
         <li onclick="clickPoza4(event)"><img class = "rezphoto" id="poza4" src="rainy.jpg"><p>RainyDay</p></li>
         <li onclick="clickPoza5(event)"><img class = "rezphoto" id="poza5" src="foggy.jpg"><p>FoggyDay</p></li>
         <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="cold.jpg"><p>SnowyDay</p></li>
-        <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="snowy.jpg"><p>SnowyDay</p></li>
+        <li onclick="clickPoza7(event)"><img class = "rezphoto" id="poza7" src="snowy.jpg"><p>SnowyDay</p></li>
       </ul>
     </div>
   </a>
@@ -60,8 +62,8 @@
         <li onclick="clickPoza4(event)"><img class = "rezphoto" id="poza4" src="office.jpg"><p>Office</p></li>
         <li onclick="clickPoza5(event)"><img class = "rezphoto" id="poza5" src="prom.jpg"><p>Prom night</p></li>
         <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="gym.jpg"><p>Sport time</p></li>
-        <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="business.jpg"><p>Business meating</p></li>
-        <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="clubbing.jpg"><p>Club time</p></li>
+        <li onclick="clickPoza7(event)"><img class = "rezphoto" id="poza7" src="business.jpg"><p>Business meating</p></li>
+        <li onclick="clickPoza8(event)"><img class = "rezphoto" id="poza8" src="clubbing.jpg"><p>Club time</p></li>
       </ul>
     </div>
   </a>
