Boys page + responsive

--- a/boyspage.html
+++ b/boyspage.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>KIDS-FOOW</title>
-    <link rel="stylesheet" href="boyspage.css">
+    <link rel="stylesheet" media="(min-width:690px)" href="boyspage.css">
+    <link rel="stylesheet" media="(max-width:690px)" href="boyspagemax.css">
   </head>
   <body>
-    
+
     <nav class="navbar1">
       <ul class="menu">
         <li ><a href="#0">First Page</a></li>
@@ -28,10 +29,8 @@
     </nav>
 
     <div class="Flex">
-      <img class="pozaCo" src="collageboys1.jpg">
-      <div class="dr">
-        <p class="Text">What<br> slippers<br> your<br> little<br> girl<br> might<br> wear<br> at<br> today's<br> event?</p>
-      </div>
+        <p class="Text">We have the right shoes<br> for the next event! <br>Here are some options that you might like!</p>
+          <img class="pozaCo" src="colajbaietei.jpg">
     </div>
 
 
@@ -43,9 +42,10 @@
         <li onclick="clickPoza1(event)"><img class = "rezphoto" id="poza1" src="sunnyday.jpg"><p>SunnyDay</p></li>
         <li onclick="clickPoza2(event)"><img class = "rezphoto" id="poza2" src="hotday.jpg"><p>HotDay</p></li>
         <li onclick="clickPoza3(event)"><img class = "rezphoto" id="poza3" src="cloudy.jpg"><p>CloudyDay</p></li>
-        <li onclick="clickPoza4(event)"><img class = "rezphoto" id="poza4" src="rainy1.jpg"><p>RainyDay</p></li>
-        <li onclick="clickPoza5(event)"><img class = "rezphoto" id="poza5" src="foggyday.jpg"><p>FoggyDay</p></li>
-        <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="snowyday.jpg"><p>SnowyDay</p></li>
+        <li onclick="clickPoza4(event)"><img class = "rezphoto" id="poza4" src="cold.jpg"><p>Cold Day</p></li>
+        <li onclick="clickPoza5(event)"><img class = "rezphoto" id="poza5" src="rainy1.jpg"><p>RainyDay</p></li>
+        <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="foggyday.jpg"><p>FoggyDay</p></li>
+        <li onclick="clickPoza7(event)"><img class = "rezphoto" id="poza7" src="snowyday.jpg"><p>SnowyDay</p></li>
       </ul>
     </div>
   </a>
