--- a/barbati.html
+++ b/barbati.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="logo_MN.png" type="image/x-icon">
     <title>MEN</title>
     <link rel="stylesheet" media="(max-width: 700px)" href="barbat-max700px.css">
   <link rel="stylesheet" media="(min-width: 700px)" href="barbati-min700px.css">
