--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" media="(max-width:690px)" href="contactmax690.css">
   <link rel="stylesheet" media="(min-width: 690px)" href="contact.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="logo_MN.png" type="image/x-icon">
     <title>Contact</title>
   </head>
   <body>
@@ -13,7 +14,7 @@
       <li><a href="womenpage.html">Women</a></li>
       <li ><a href="barbati.html">Men</a></li>
       <div class="dropdown">
-      <li ><a href="KIDS.html">Kids</a>
+      <li ><a href="#0">Kids</a>
         <div class="dropdown-content">
           <a href="paginakids.html">Girl</a>
           <a href="boyspage.html">Boy</a>
