--- a/pagina2.html
+++ b/pagina2.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="shortcut icon" href="logo_MN.png" type="image/x-icon">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Rezultate femei</title>
+  <title>Finish</title>
   <link rel="stylesheet" media="(max-width: 930px)" href="pagina2-max.css">
   <link rel="stylesheet" media="(min-width: 930px)" href="pagina2-min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,19 +15,19 @@
 <body>
   <nav class="navbar1">
     <ul class="menu">
-      <li ><a href="#0">First Page</a></li>
-      <li><a href="#0">Women</a></li>
-      <li ><a href="#0">Men</a></li>
+      <li ><a href="MENU.html">First Page</a></li>
+      <li><a href="womenpage.html">Women</a></li>
+      <li ><a href="barbati.html">Men</a></li>
       <div class="dropdown">
       <li><a href="#0">Kids</a>
         <div class="dropdown-content">
-          <a href="#0">Girl</a>
-          <a href="#0">Boy</a>
+          <a href="paginakids.html">Girl</a>
+          <a href="boyspage.html">Boy</a>
         </div>
       </li>
     </div>
-      <li><a href="#0">Contact</a></li>
-      <li><a href="#0">Statistics</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="statistici.html">Statistics</a></li>
     </ul>
   </nav>
   <div class="Lista">
