--- a/primapagina.html
+++ b/primapagina.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="primapagina.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="logo_MN.png" type="image/x-icon">
     <title>FooW</title>
   </head>
   <body>
