--- a/boyspage.html
+++ b/boyspage.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="logo_MN.png" type="image/x-icon">
     <title>KIDS-FOOW</title>
     <link rel="stylesheet" media="(min-width:690px)" href="boyspage.css">
     <link rel="stylesheet" media="(max-width:690px)" href="boyspagemax.css">
@@ -12,19 +13,19 @@
 
     <nav class="navbar1">
       <ul class="menu">
-        <li ><a href="#0">First Page</a></li>
-        <li><a href="#0">Women</a></li>
-        <li ><a href="#0">Men</a></li>
+        <li ><a href="MENU.html">First Page</a></li>
+        <li><a href="womenpage.html">Women</a></li>
+        <li ><a href="barbati.html">Men</a></li>
         <div class="dropdown">
         <li ><a href="#0">Kids</a>
           <div class="dropdown-content">
-            <a href="#0">Girl</a>
-            <a href="#0">Boy</a>
+            <a href="paginakids.html">Girl</a>
+            <a href="boyspage.html">Boy</a>
           </div>
         </div>
         </li>
-        <li><a href="#0">Contact</a></li>
-        <li><a href="#0">Statistics</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="statistici.html">Statistics</a></li>
       </ul>
     </nav>
 
@@ -53,7 +54,7 @@
 <br>
 <div class="main" id="section2">
 <h2>What is the event?</h2>
-  <a href="#section3">
+  <a href="pagina2.html">
     <div id="#lista1">
       <ul class="pas1">
         <li onclick="clickPoza1(event)"><img class = "rezphoto" id="poza1" src="weding1.jpg"><p>Wedding</p></li>
