--- a/paginalogare.html
+++ b/paginalogare.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="paginalogare.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="logo_MN.png" type="image/x-icon">
     <title>Login</title>
   </head>
   <body>
