--- a/barbati.html
+++ b/barbati.html
@@ -1,5 +1,5 @@
-<!--DOCTYPE html-->
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,17 +13,16 @@
 
     <nav class="navbar1">
       <ul class="menu">
-        <li><a href="MENU.html">First Page</a></li>
+        <li ><a href="MENU.html">First Page</a></li>
         <li><a href="womenpage.html">Women</a></li>
-        <li><a href="barbati.html">Men</a></li>
-        <div class="dropdown">
-        <li><a href="KIDS.html">Kids</a>
+        <li ><a href="barbati.html">Men</a></li>
+        <li class="dropdown"><a href="#0">Kids</a>
           <div class="dropdown-content">
             <a href="paginakids.html">Girl</a>
             <a href="boyspage.html">Boy</a>
           </div>
-        </li>
-        </div>
+
+
         <li><a href="contact.html">Contact</a></li>
         <li><a href="statistici.html">Statistics</a></li>
       </ul>
@@ -31,7 +30,7 @@
 
     <div class="Flex">
         <p class="Text">It's the perfect time <br> to find the perfect shoes <br> for your event!</p>
-      <img class="pozaCo" src="collagemen.jpg">
+      <img alt="Coperta" class="pozaCo" src="collagemen.jpg">
     </div>
 
 
@@ -40,13 +39,13 @@
   <a href="#section2">
     <div id="#lista1">
       <ul class="pas1">
-        <li onclick="clickPoza1(event)"><img class = "rezphoto" id="poza1" src="p1.jpg"><p>Sunny Day</p></li>
-        <li onclick="clickPoza2(event)"><img class = "rezphoto" id="poza2" src="p2.jpg"><p>Hot Day</p></li>
-        <li onclick="clickPoza3(event)"><img class = "rezphoto" id="poza3" src="p3.jpg"><p>Cloudy Day</p></li>
-        <li onclick="clickPoza4(event)"><img class = "rezphoto" id="poza4" src="p4.jpg"><p>Rainy Day</p></li>
-        <li onclick="clickPoza5(event)"><img class = "rezphoto" id="poza5" src="p5.jpg"><p>Foggy Day</p></li>
-        <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="p6.jpg"><p>Snowy Day</p></li>
-        <li onclick="clickPoza7(event)"><img class = "rezphoto" id="poza7" src="p7.jpg"><p>Cold Day</p></li>
+        <li onclick="clickPoza1(event)"><img alt="SunnyDay" class = "rezphoto" id="poza1" src="p1.jpg"><p>Sunny Day</p></li>
+        <li onclick="clickPoza2(event)"><img alt="HotDay" class = "rezphoto" id="poza2" src="p2.jpg"><p>Hot Day</p></li>
+        <li onclick="clickPoza3(event)"><img alt="cloudyday" class = "rezphoto" id="poza3" src="p3.jpg"><p>Cloudy Day</p></li>
+        <li onclick="clickPoza4(event)"><img alt="Rainy Day" class = "rezphoto" id="poza4" src="p4.jpg"><p>Rainy Day</p></li>
+        <li onclick="clickPoza5(event)"><img alt="Foggy Day" class = "rezphoto" id="poza5" src="p5.jpg"><p>Foggy Day</p></li>
+        <li onclick="clickPoza6(event)"><img alt="Snowy Day" class = "rezphoto" id="poza6" src="p6.jpg"><p>Snowy Day</p></li>
+        <li onclick="clickPoza7(event)"><img alt="Cold Day" class = "rezphoto" id="poza7" src="p7.jpg"><p>Cold Day</p></li>
       </ul>
     </div>
   </a>
@@ -55,17 +54,17 @@
 <div class="main" id="section2">
 <h2>What is the event?</h2>
   <a href="pagina2.html">
-    <div id="#lista1">
+    <div id="#lista2">
       <ul class="pas1">
-        <li onclick="clickPoza1(event)"><img class = "rezphoto" id="poza1" src="p8.jpg"><p>Wedding</p></li>
-        <li onclick="clickPoza2(event)"><img class = "rezphoto" id="poza2" src="p9.jpg"><p>Christening</p></li>
-        <li onclick="clickPoza3(event)"><img class = "rezphoto" id="poza3" src="p10.jpg"><p>Festival</p></li>
-        <li onclick="clickPoza4(event)"><img class = "rezphoto" id="poza4" src="p11.jpg"><p>Office</p></li>
-        <li onclick="clickPoza5(event)"><img class = "rezphoto" id="poza5" src="p12.jpg"><p>Birthday Party</p></li>
-        <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="p13.jpg"><p>Prom Night</p></li>
-        <li onclick="clickPoza7(event)"><img class = "rezphoto" id="poza7" src="gym.jpg"><p>Sport time</p></li>
-        <li onclick="clickPoza8(event)"><img class = "rezphoto" id="poza8" src="business.jpg"><p>Business meating</p></li>
-        <li onclick="clickPoza9(event)"><img class = "rezphoto" id="poza9" src="clubbing.jpg"><p>Club time</p></li>
+        <li onclick="clickPoza1(event)"><img alt="Wedding" class = "rezphoto" id="poza8" src="p8.jpg"><p>Wedding</p></li>
+        <li onclick="clickPoza2(event)"><img alt="Christening" class = "rezphoto" id="poza9" src="p9.jpg"><p>Christening</p></li>
+        <li onclick="clickPoza3(event)"><img alt="Festival" class = "rezphoto" id="poza10" src="p10.jpg"><p>Festival</p></li>
+        <li onclick="clickPoza4(event)"><img alt="Office" class = "rezphoto" id="poza11" src="p11.jpg"><p>Office</p></li>
+        <li onclick="clickPoza5(event)"><img alt="Birthday Party" class = "rezphoto" id="poza12" src="p12.jpg"><p>Birthday Party</p></li>
+        <li onclick="clickPoza6(event)"><img alt="Prom Night" class = "rezphoto" id="poza13" src="p13.jpg"><p>Prom Night</p></li>
+        <li onclick="clickPoza7(event)"><img alt="Sport time" class = "rezphoto" id="poza14" src="gym.jpg"><p>Sport time</p></li>
+        <li onclick="clickPoza8(event)"><img alt="Business meating" class = "rezphoto" id="poza15" src="business.jpg"><p>Business meating</p></li>
+        <li onclick="clickPoza9(event)"><img alt="Club time" class = "rezphoto" id="poza16" src="clubbing.jpg"><p>Club time</p></li>
       </ul>
     </div>
   </a>
