--- a/boyspage.html
+++ b/boyspage.html
@@ -1,5 +1,5 @@
-<!--DOCTYPE html-->
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,14 +16,13 @@
         <li ><a href="MENU.html">First Page</a></li>
         <li><a href="womenpage.html">Women</a></li>
         <li ><a href="barbati.html">Men</a></li>
-        <div class="dropdown">
-        <li ><a href="#0">Kids</a>
+        <li class="dropdown"><a href="#0">Kids</a>
           <div class="dropdown-content">
             <a href="paginakids.html">Girl</a>
             <a href="boyspage.html">Boy</a>
           </div>
-        </div>
-        </li>
+
+
         <li><a href="contact.html">Contact</a></li>
         <li><a href="statistici.html">Statistics</a></li>
       </ul>
@@ -31,7 +30,7 @@
 
     <div class="Flex">
         <p class="Text">We have the right shoes<br> for the next event! <br>Here are some options that you might like!</p>
-          <img class="pozaCo" src="colajbaietei.jpg">
+          <img alt="Coperta" class="pozaCo" src="colajbaietei.jpg">
     </div>
 
 
@@ -40,13 +39,13 @@
   <a href="#section2">
     <div id="#lista1">
       <ul class="pas1">
-        <li onclick="clickPoza1(event)"><img class = "rezphoto" id="poza1" src="sunnyday.jpg"><p>SunnyDay</p></li>
-        <li onclick="clickPoza2(event)"><img class = "rezphoto" id="poza2" src="hotday.jpg"><p>HotDay</p></li>
-        <li onclick="clickPoza3(event)"><img class = "rezphoto" id="poza3" src="cloudy.jpg"><p>CloudyDay</p></li>
-        <li onclick="clickPoza4(event)"><img class = "rezphoto" id="poza4" src="cold.jpg"><p>Cold Day</p></li>
-        <li onclick="clickPoza5(event)"><img class = "rezphoto" id="poza5" src="rainy1.jpg"><p>RainyDay</p></li>
-        <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="foggyday.jpg"><p>FoggyDay</p></li>
-        <li onclick="clickPoza7(event)"><img class = "rezphoto" id="poza7" src="snowyday.jpg"><p>SnowyDay</p></li>
+        <li onclick="clickPoza1(event)"><img alt="SunnyDay" class = "rezphoto" id="poza1" src="sunnyday.jpg"><p>SunnyDay</p></li>
+        <li onclick="clickPoza2(event)"><img alt="HotDay" class = "rezphoto" id="poza2" src="hotday.jpg"><p>HotDay</p></li>
+        <li onclick="clickPoza3(event)"><img alt="CloudyDay" class = "rezphoto" id="poza3" src="cloudy.jpg"><p>CloudyDay</p></li>
+        <li onclick="clickPoza4(event)"><img alt="Cold Day" class = "rezphoto" id="poza4" src="cold.jpg"><p>Cold Day</p></li>
+        <li onclick="clickPoza5(event)"><img alt="RainyDay" class = "rezphoto" id="poza5" src="rainy1.jpg"><p>RainyDay</p></li>
+        <li onclick="clickPoza6(event)"><img alt="FoggyDay" class = "rezphoto" id="poza6" src="foggyday.jpg"><p>FoggyDay</p></li>
+        <li onclick="clickPoza7(event)"><img alt="SnowyDay" class = "rezphoto" id="poza7" src="snowyday.jpg"><p>SnowyDay</p></li>
       </ul>
     </div>
   </a>
@@ -55,14 +54,14 @@
 <div class="main" id="section2">
 <h2>What is the event?</h2>
   <a href="pagina2.html">
-    <div id="#lista1">
+    <div id="#lista2">
       <ul class="pas1">
-        <li onclick="clickPoza1(event)"><img class = "rezphoto" id="poza1" src="weding1.jpg"><p>Wedding</p></li>
-        <li onclick="clickPoza2(event)"><img class = "rezphoto" id="poza2" src="christening1.jpg"><p>Christening</p></li>
-        <li onclick="clickPoza3(event)"><img class = "rezphoto" id="poza3" src="festival.jpg"><p>Festival</p></li>
-        <li onclick="clickPoza4(event)"><img class = "rezphoto" id="poza4" src="office.jpg"><p>Office</p></li>
-        <li onclick="clickPoza5(event)"><img class = "rezphoto" id="poza5" src="bparty.jpg"><p>Birthday Party</p></li>
-        <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="waterpark.jpg"><p>Waterpark</p></li>
+        <li onclick="clickPoza1(event)"><img alt="Wedding" class = "rezphoto" id="poza8" src="weding1.jpg"><p>Wedding</p></li>
+        <li onclick="clickPoza2(event)"><img alt="Christening" class = "rezphoto" id="poza9" src="christening1.jpg"><p>Christening</p></li>
+        <li onclick="clickPoza3(event)"><img alt="Festival" class = "rezphoto" id="poza10" src="festival.jpg"><p>Festival</p></li>
+        <li onclick="clickPoza4(event)"><img alt="Office" class = "rezphoto" id="poza11" src="office.jpg"><p>Office</p></li>
+        <li onclick="clickPoza5(event)"><img alt="Birthday Party" class = "rezphoto" id="poza12" src="bparty.jpg"><p>Birthday Party</p></li>
+        <li onclick="clickPoza6(event)"><img alt="Waterpark" class = "rezphoto" id="poza13" src="waterpark.jpg"><p>Waterpark</p></li>
       </ul>
     </div>
   </a>
