--- a/womenpage.html
+++ b/womenpage.html
@@ -1,5 +1,5 @@
-<!--DOCTYPE html-->
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,27 +11,26 @@
 
   </head>
   <body>
-    <div class="navbar1">
+    <nav class="navbar1">
       <ul class="menu">
         <li ><a href="MENU.html">First Page</a></li>
-        <li><a href="Womenpage.html">Women</a></li>
+        <li><a href="womenpage.html">Women</a></li>
         <li ><a href="barbati.html">Men</a></li>
-        <div class="dropdown">
-        <li ><a href="#0">Kids</a>
+        <li class="dropdown"><a href="#0">Kids</a>
           <div class="dropdown-content">
             <a href="paginakids.html">Girl</a>
             <a href="boyspage.html">Boy</a>
           </div>
-          </li>
-          </div>
-          <li><a href="contact.html">Contact</a></li>
-        <li><a href="statistice.html">Statistics</a></li>
+
+
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="statistici.html">Statistics</a></li>
       </ul>
-    </div>
+    </nav>
 
     <div class="Flex">
         <p class="Text">It's the perfect time <br> to find the perfect shoes <br> for your event!</p>
-            <img class="pozaCo" src="collagewomen.jpg">
+            <img alt="Coperta" class="pozaCo" src="collagewomen.jpg">
     </div>
 
 
@@ -40,13 +39,13 @@
   <a href="#section2">
     <div id="#lista1">
       <ul class="pas1">
-        <li onclick="clickPoza1(event)"><img class = "rezphoto" id="poza1" src="sunny.jpg"><p>SunnyDay</p></li>
-        <li onclick="clickPoza2(event)"><img class = "rezphoto" id="poza2" src="hot.jpg"><p>HotDay</p></li>
-        <li onclick="clickPoza3(event)"><img class = "rezphoto" id="poza3" src="cloudy.jpg"><p>CloudyDay</p></li>
-        <li onclick="clickPoza4(event)"><img class = "rezphoto" id="poza4" src="rainy.jpg"><p>RainyDay</p></li>
-        <li onclick="clickPoza5(event)"><img class = "rezphoto" id="poza5" src="foggy.jpg"><p>FoggyDay</p></li>
-        <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="cold.jpg"><p>SnowyDay</p></li>
-        <li onclick="clickPoza7(event)"><img class = "rezphoto" id="poza7" src="snowy.jpg"><p>SnowyDay</p></li>
+        <li onclick="clickPoza1(event)"><img alt="SunnyDay" class = "rezphoto" id="poza1" src="sunny.jpg"><p>SunnyDay</p></li>
+        <li onclick="clickPoza2(event)"><img alt="HotDay" class = "rezphoto" id="poza2" src="hot.jpg"><p>HotDay</p></li>
+        <li onclick="clickPoza3(event)"><img alt="cloudyday" class = "rezphoto" id="poza3" src="cloudy.jpg"><p>CloudyDay</p></li>
+        <li onclick="clickPoza4(event)"><img alt="RainyDay" class = "rezphoto" id="poza4" src="rainy.jpg"><p>RainyDay</p></li>
+        <li onclick="clickPoza5(event)"><img alt="FoggyDay" class = "rezphoto" id="poza5" src="foggy.jpg"><p>FoggyDay</p></li>
+        <li onclick="clickPoza6(event)"><img alt="coldday" class = "rezphoto" id="poza6" src="cold.jpg"><p>ColdDay</p></li>
+        <li onclick="clickPoza7(event)"><img  alt="snowyday" class = "rezphoto" id="poza7" src="snowy.jpg"><p>SnowyDay</p></li>
       </ul>
     </div>
   </a>
@@ -55,16 +54,16 @@
 <div class="main" id="section2">
 <h2>What is the event?</h2>
   <a href="pagina2.html">
-    <div id="#lista1">
+    <div id="#lista2">
       <ul class="pas1">
-        <li onclick="clickPoza1(event)"><img class = "rezphoto" id="poza1" src="weding1.jpg"><p>Wedding</p></li>
-        <li onclick="clickPoza2(event)"><img class = "rezphoto" id="poza2" src="christening1.jpg"><p>Christening</p></li>
-        <li onclick="clickPoza3(event)"><img class = "rezphoto" id="poza3" src="festival.jpg"><p>Festival</p></li>
-        <li onclick="clickPoza4(event)"><img class = "rezphoto" id="poza4" src="office.jpg"><p>Office</p></li>
-        <li onclick="clickPoza5(event)"><img class = "rezphoto" id="poza5" src="prom.jpg"><p>Prom night</p></li>
-        <li onclick="clickPoza6(event)"><img class = "rezphoto" id="poza6" src="gym.jpg"><p>Sport time</p></li>
-        <li onclick="clickPoza7(event)"><img class = "rezphoto" id="poza7" src="business.jpg"><p>Business meating</p></li>
-        <li onclick="clickPoza8(event)"><img class = "rezphoto" id="poza8" src="clubbing.jpg"><p>Club time</p></li>
+        <li onclick="clickPoza1(event)"><img alt="Wedding" class = "rezphoto" id="poza8" src="weding1.jpg"><p>Wedding</p></li>
+        <li onclick="clickPoza2(event)"><img alt="Christening" class = "rezphoto" id="poza9" src="christening1.jpg"><p>Christening</p></li>
+        <li onclick="clickPoza3(event)"><img alt="Festival" class = "rezphoto" id="poza10" src="festival.jpg"><p>Festival</p></li>
+        <li onclick="clickPoza4(event)"><img alt="Office" class = "rezphoto" id="poza11" src="office.jpg"><p>Office</p></li>
+        <li onclick="clickPoza5(event)"><img alt="Prom" class = "rezphoto" id="poza12" src="prom.jpg"><p>Prom night</p></li>
+        <li onclick="clickPoza6(event)"><img alt="Sport" class = "rezphoto" id="poza13" src="gym.jpg"><p>Sport time</p></li>
+        <li onclick="clickPoza7(event)"><img alt="Business meating" class = "rezphoto" id="poza14" src="business.jpg"><p>Business meating</p></li>
+        <li onclick="clickPoza8(event)"><img alt="Club time" class = "rezphoto" id="poza15" src="clubbing.jpg"><p>Club time</p></li>
       </ul>
     </div>
   </a>
