--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -8,35 +9,29 @@
     <title>Contact</title>
   </head>
   <body>
-    <div class="navbar1">
-    <ul class="menu">
-      <li ><a href="MENU.html">First Page</a></li>
-      <li><a href="womenpage.html">Women</a></li>
-      <li ><a href="barbati.html">Men</a></li>
-      <div class="dropdown">
-      <li ><a href="#0">Kids</a>
-        <div class="dropdown-content">
-          <a href="paginakids.html">Girl</a>
-          <a href="boyspage.html">Boy</a>
-        </div>
-      </div>
-      </li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="statistici.html">Statistics</a></li>
-    </ul>
-  </div>
+    <nav class="navbar1">
+          <ul class="menu">
+            <li ><a href="MENU.html">First Page</a></li>
+            <li><a href="womenpage.html">Women</a></li>
+            <li ><a href="barbati.html">Men</a></li>
+            <li class="dropdown"><a href="#0">Kids</a>
+              <div class="dropdown-content">
+                <a href="paginakids.html">Girl</a>
+                <a href="boyspage.html">Boy</a>
+              </div>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="statistici.html">Statistics</a></li>
+          </ul>
+        </nav>
   <div class="coperta" ></div>
 <div class="message">
   <div class="title">Contact</div>
   <p>Adress: Alexandru cel Bun Avenue</p>
   <p> Phone: 0987654321</p>
   <p>E-mail: papuci@gmail.com</p>
-
-  <label for="subject">Message</label><br>
+  <p>Message</p>
   <textarea id="message" name="message" placeholder="Send us your message.." style="height:170px"></textarea>
-
 <br></br>
-
     <a href="paginainregistrare.html" class="button">Send</a>
 </div>
   </body>
