--- a/paginainregistrare.html
+++ b/paginainregistrare.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -9,19 +10,19 @@
   <body>
     <div class="coperta" ></div>
 <div class="centered">
-    <label for="E-mail">E-mail</label>
+    <p>E-mail</p>
     <input type="text" id="user" name="E-mail" placeholder="E-mail...">
 
-    <label for="First Name">First Name</label>
+    <p>First Name</p>
     <input type="text" id="fname" name="First Name" placeholder="First Name...">
 
-    <label for="Last Name">Last Name</label>
+    <p>Last Name</p>
     <input type="text" id="lname" name="Last Name" placeholder="Last Name...">
 
-    <label for="password">Password</label>
+    <p>Password</p>
     <input type="text" id="pass" name="Password" placeholder="Password...">
 
-    <label for="gender">Gender</label>
+    <p>Gender</p>
       <select id="gender" name="gender">
         <option value="Female">Female</option>
         <option value="Male">Male</option>
