--- a/paginalogare.html
+++ b/paginalogare.html
@@ -1,4 +1,4 @@
-<!--DOCTYPE html-->
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -10,10 +10,10 @@
   <body>
     <div class="coperta" ></div>
     <div class="centered">
-    <label for="E-mail">E-mail</label>
+    <p>E-mail</p>
     <input type="text" id="user" name="E-mail" placeholder="E-mail...">
 
-    <label for="password">Password</label>
+    <p>Password</p>
     <input type="text" id="pass" name="Password" placeholder="Password...">
 <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
