--- a/statistici.html
+++ b/statistici.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -8,23 +9,20 @@
     <title>Statistics</title>
   </head>
   <body>
-    <div class="navbar1">
-    <ul class="menu">
-      <li ><a href="MENU.html">First Page</a></li>
-      <li><a href="womenpage.html">Women</a></li>
-      <li ><a href="barbati.html">Men</a></li>
-      <div class="dropdown">
-      <li ><a href="#0">Kids</a>
-        <div class="dropdown-content">
-          <a href="paginakids.html">Girl</a>
-          <a href="boyspage.html">Boy</a>
-        </div>
-      </div>
-      </li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="statistici.html">Statistics</a></li>
-    </ul>
-  </div>
+    <nav class="navbar1">
+        <ul class="menu">
+          <li ><a href="MENU.html">First Page</a></li>
+          <li><a href="womenpage.html">Women</a></li>
+          <li ><a href="barbati.html">Men</a></li>
+          <li class="dropdown"><a href="#0">Kids</a>
+            <div class="dropdown-content">
+              <a href="paginakids.html">Girl</a>
+              <a href="boyspage.html">Boy</a>
+            </div>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="statistici.html">Statistics</a></li>
+        </ul>
+      </nav>
     <div class="coperta"></div>
     <div class="stat">Statistics</div>
     <h1 class="title">Most views in the last week</h1>
