--- a/paginakids.html
+++ b/paginakids.html
@@ -51,7 +51,7 @@
 <br>
 <div class="main" id="section2">
 <h2>What is the event?</h2>
-  <a href="#section3">
+  <a href="pagina2.html">
     <div id="#lista2">
       <ul class="pas1">
         <li onclick="clickPoza8(event)"><img alt="Wedding" class = "rezphoto" id="poza8" src="weding1.jpg"><p>Wedding</p></li>
